--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ h3.slogan {
   border-bottom: 10px solid var(--skin-color);
   border-right: 10px solid var(--skin-color);
   right: -10px;
+  bottom: 0;
 }
 
 .home-img::before {
